latest js updates

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <button id="playerO">O</button>
       </div>
       <div class="game">
-        <div class="game-grid X">X</div>
-        <div class="game-grid X">X</div>
-        <div class="game-grid X">X</div>
-        <div class="game-grid O">O</div>
-        <div class="game-grid X">X</div>
-        <div class="game-grid O">O</div>
-        <div class="game-grid O">O</div>
-        <div class="game-grid O">O</div>
-        <div class="game-grid empty"></div>
+        <!-- <div class="game-grid">X</div>
+        <div class="game-grid">X</div>
+        <div class="game-grid">X</div>
+        <div class="game-grid">O</div>
+        <div class="game-grid">X</div>
+        <div class="game-grid">O</div>
+        <div class="game-grid">O</div>
+        <div class="game-grid">O</div>
+        <div class="game-grid"></div> -->
       </div>
     </div>
     <script src="./script.js"></script>
