More style changes, add Div for buttons

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <body>
     <div class="main">
       <h1>Tic-Tac-Toe</h1>
-      <button class="startButton">Start</button>
-      <button class="resetButton">Reset</button>
+      <div class="buttons-container">
+        <button class="startButton">Start</button>
+        <button class="resetButton">Reset</button>
+      </div>
       <div class="board" id="board"></div>
       <div id="messageModal" class="modal"></div>
     </div>
