Added divs to show who's turn it is, and who wins. More CSS styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <button class="startButton">Start</button>
         <button class="resetButton">Reset</button>
       </div>
+      <div class="turnDisplay"></div>
       <div class="board" id="board"></div>
-      <div id="messageModal" class="modal"></div>
+      <div class="messageDisplay"></div>
     </div>
 
     <script src="./script.js"></script>
