formatting CSS & HTML better for mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="main">
-      <h1>Tic-Tac-Toe</h1>
+      <div class="header"><h1>Tic-Tac-Toe</h1></div>
       <div class="buttons-container">
         <button class="startButton">Start</button>
         <button class="resetButton">Reset</button>
@@ -16,6 +16,9 @@
       <div class="turnDisplay"></div>
       <div class="board" id="board"></div>
       <div class="messageDisplay"></div>
+      <div class="footer">
+        Katie G. Duryea - <a href="">The Odin Project</a>
+      </div>
     </div>
 
     <script src="./script.js"></script>
